# AsioSelectAdapter

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
cmake/: GTest-CMakeLists.txt.in
include/adapter/: AsioDispatcher.hpp  AsioSelect.hpp
include/wrapper/: AsioSelectAdapter.hpp
source/: AsioSelect.cpp
test/: CMakeLists.txt  legacy.cpp  legacy.hpp  one_test.cpp  platform.hpp
